<resources>
    <string name="app_name">Android</string>
    <string name="logo">Maf<font color='#980002'> i</font>a</string>
    <string name="create_lobby">Create lobby</string>
    <string name="join_lobby">Join lobby</string>
    <string name="settings">Settings</string>
    <string name="faq">Help</string>
    <string name="login">Login</string>
    <string name="help">Help</string>
    <string name="join_random">JOIN RANDOM</string>
    <string name="join">Join</string>
    <string name="cancel">Cancel</string>
    <string name="player_list">All players</string>
    <string name="n_mafia">Amount of mafia</string>
    <string name="mafia">Mafia</string>
    <string name="civilian">Civilian</string>
    <string name="has_cop">Policeman</string>
    <string name="has_doctor">Doctor</string>
    <string name="has_lover">Lover</string>
    <string name="start_lobby">Start Game</string>
    <string name="url">http://192.168.43.73:8000/api/</string>
    <string name="problem">Some problems with the game server. Wait a little</string>
    <string name="settings_lang">Language settings</string>
    <string name="helpmsg">"Welcome to Mafia game\n"
    "Press create lobby to start new game\n"
    "or choose the existing one by pressing join lobby\n"
        "Get you unique username!"</string>
    <string name="name">Your login is busy</string>
    <string name="login_length">Your login must be 3–12 symbols long</string>
    <string name="role_error">Invalid roles permutation</string>
    <string name="gameinfo">Information</string>
    <string name="chat">Chat</string>
    <string name="your_name">You</string>
    <string name="friends">Friends</string>
    <string name="night">Night</string>
    <string name="day">Day</string>
    <string name="not_night">Day</string>
    <string name="game_faq">There is the chat at the right,
        speak with others and discuss situation,
        select suspicious player at the left list</string>
</resources>
